--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DEPLOY_ENABLED=true
 # Network selection
 NETWORK=tenderly_sonic
 SONIC=https://rpc.soniclabs.com/
-TENDERLY_RPC_URL=https://virtual.sonic.rpc.tenderly.co/1f03bfd6-340c-4789-b346-ec582e2b3141
+TENDERLY_RPC_URL=https://virtual.sonic.rpc.tenderly.co
 
 # Account addresses - replace these with your actual addresses
 DEPLOYER=0xYourDeployerAddress
